<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.EndActivity"
        >

    <com.example.invitation.view_utills.GradientTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage_date"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/gradientTextView"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_the_dates"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="@+id/gradientTextView"

            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gradientTextView"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/gradientTextView"
            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/endlayout_image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/app_name"
            android:id="@+id/imageView"
            />

</android.support.constraint.ConstraintLayout>