<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment"
        >

    <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            style="@style/messageFont"

            android:text="@string/we_are_no_longer_two"
            android:textAlignment="center"
            />

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


            <android.support.v7.widget.CardView
                    android:layout_marginTop="80dp"
                    android:id="@+id/cv_wedding_couples"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/couples_name_banner_background"
                        android:layout_height="200dp"
                        >

                    <TextView
                            android:id="@+id/textView2"
                            style="@style/TitleFont"
                            android:text="@string/bride_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/ftv_wedding_icon"
                            />

                    <com.example.invitation.Utils.font_utils.FontTextView
                            style="@style/TitleFont"
                            android:id="@+id/ftv_wedding_icon"
                           android:layout_margin="2dp"
                            android:text="&#xf81b;"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            app:layout_constraintBottom_toBottomOf="parent"
                            />

                    <TextView
                            android:id="@+id/textView"
                            style="@style/TitleFont"
                            android:text="@string/groom_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"

                            app:layout_constraintTop_toBottomOf="@+id/ftv_wedding_icon"
                            />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/cv_wedding_couples"
                    >

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:visibility="visible"
                        >

                    <LinearLayout
                            android:id="@+id/ll_day"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ll_hour"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                        <com.example.invitation.view_utills.GradientTextView
                                android:id="@+id/tv_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="40sp"

                                />

                        <TextView
                                android:id="@+id/tv_label_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Days"
                                android:textAlignment="center"
                                android:textSize="15sp"

                                />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/ll_hour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ll_minute"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/ll_day"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                        <com.example.invitation.view_utills.GradientTextView
                                android:id="@+id/tv_hour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="40sp"
                                />

                        <TextView
                                android:id="@+id/tv_label_hour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hours"
                                android:textAlignment="center"
                                android:textSize="15sp"

                                />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/ll_minute"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/ll_sec"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/ll_hour"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                        <com.example.invitation.view_utills.GradientTextView
                                android:id="@+id/tv_minute"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="40sp"
                                />

                        <TextView
                                android:id="@+id/tv_label_minute"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes"
                                android:textAlignment="center"
                                android:textSize="15sp"

                                />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/ll_sec"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/ll_minute"
                            app:layout_constraintTop_toTopOf="parent"
                            >

                        <com.example.invitation.view_utills.GradientTextView
                                android:id="@+id/tv_sec"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="40sp"
                                />

                        <TextView
                                android:id="@+id/tv_label_sec"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/seconds"
                                android:textAlignment="center"
                                android:textSize="15sp"

                                />

                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    layout="@layout/view_reception_details"
                    android:id="@+id/inc_reception"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4"
                    />


            <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    layout="@layout/view_reception_details"

                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/inc_reception"
                    />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</FrameLayout>